integration-tests/src/test-cases/parse-error-bare-inquiry/expected
parse error: from "test-cases/parse-error-bare-inquiry/input", line 1:
| $x
| ^^
|
+-> Syntax error: pure expressions cannot contain inquiry effects, e.g. `$…`

